fix the bugs by authentication, add distance calculation in write-in service. update the swagger documents
